- Added PAD_NEGOTIATING flag, remove PAD_EOS flag
Original commit message from CVS:
- Added PAD_NEGOTIATING flag, remove PAD_EOS flag
- Try to avoid negotiation in state change if pad were already negotiating
- Added gstquery.c for completeness (maybe merge common functions with
gstformat.c?)

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -75,6 +75,7 @@ libgstreamer_@GST_MAJORMINOR@_la_SOURCES =		\
 	gstprobe.c		\
 	gstprops.c		\
 	gstqueue.c		\
+	gstquery.c		\
 	gstscheduler.c		\
 	gstsystemclock.c	\
 	gstthread.c		\
