--- a/gstreamer/plugins/indexers/Makefile.am
+++ b/gstreamer/plugins/indexers/Makefile.am
@@ -2,7 +2,7 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstindexers.la
 
-libgstindexers_la_SOURCES = gstmemindex.c
+libgstindexers_la_SOURCES = gstmemindex.c gstfileindex.c
 libgstindexers_la_CFLAGS = $(GST_CFLAGS)
 libgstindexers_la_LIBADD =
 libgstindexers_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
