And now it's inlined again :)
Original commit message from CVS:
And now it's inlined again :)

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -81,6 +81,7 @@ libgstreamer_@GST_MAJORMINOR@_la_SOURCES =		\
 	gstthread.c		\
 	gstthreaddummy.c	\
 	$(GST_TRACE_SRC)	\
+	gsttrashstack.c		\
 	gsttype.c		\
 	$(GST_TYPEFIND_SRC)	\
 	gstutils.c		\
