--- a/gstreamer/tests/sched/Makefile.am
+++ b/gstreamer/tests/sched/Makefile.am
@@ -1,7 +1,7 @@
 if GST_DISABLE_LOADSAVE
 noinst_PROGRAMS =
 else
-noinst_PROGRAMS = runxml dynamic-pipeline sched-stress
+noinst_PROGRAMS = runxml dynamic-pipeline sched-stress interrupt1 interrupt2
 endif
 
 dynamic_pipeline_SOURCES = dynamic-pipeline.c 
