first pass of connect->link gst-plugins and other stuff compiles without change at this point
Original commit message from CVS:
first pass of connect->link
gst-plugins and other stuff compiles without change at this point

--- a/gstreamer/gst/Makefile.am
+++ b/gstreamer/gst/Makefile.am
@@ -116,6 +116,7 @@ gst_headers =			\
 	gstbufferpool-default.h \
 	gstcaps.h		\
 	gstclock.h		\
+	gstcompat.h		\
 	gstcpu.h		\
 	gstdata.h		\
 	gstelement.h		\
