--- a/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
+++ b/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
@@ -1,5 +1,3 @@
-EXTRA_DIST = Tag
-
 # this doesn't trigger the distdir target in the ffmpeg checkout
 DIST_SUBDIRS =
 
@@ -12,6 +10,8 @@ endif
 SUBDIRS = $(FFMPEG_DIR)
 
 DISTFILES = \
+	Tag \
+	ffmpeg/CVS/Tag \
 	ffmpeg/Changelog \
 	ffmpeg/COPYING \
 	ffmpeg/CREDITS \
