Added first unusable code that should become the base element for a new aviparser
Original commit message from CVS:
Added first unusable code that should become the base element for a new
aviparser

--- a/gst-plugins-good/gst/avi/Makefile.am
+++ b/gst-plugins-good/gst/avi/Makefile.am
@@ -2,11 +2,13 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = \
 		libgstavimux.la \
-		libgstavidemux.la
+		libgstavidemux.la \
+		libgstaviparse.la
 #		libgstaviaudiodecoder.la
 
 libgstavidemux_la_SOURCES = gstavidemux.c 
 libgstavimux_la_SOURCES = gstavimux.c 
+libgstaviparse_la_SOURCES = gstaviparse.c riff.c
 # libgstaviaudiodecoder_la_SOURCES = gstaviaudiodecoder.c 
 
 noinst_HEADERS = \
@@ -23,6 +25,10 @@ libgstavidemux_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstavimux_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
 libgstavimux_la_LIBADD =
 libgstavimux_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+
+libgstaviparse_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
+libgstaviparse_la_LIBADD =
+libgstaviparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 # libgstaviaudiodecoder_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
 # libgstaviaudiodecoder_la_LIBADD =
