- new avi demuxer doesn't use a recursive infinite loop anymore
Original commit message from CVS:
- new avi demuxer doesn't use a recursive infinite loop anymore
- removed temporary riff.[ch] files
- removed aviparse from build

--- a/gst-plugins-good/gst/avi/Makefile.am
+++ b/gst-plugins-good/gst/avi/Makefile.am
@@ -2,19 +2,18 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = \
 		libgstavimux.la \
-		libgstavidemux.la \
-		libgstaviparse.la
+		libgstavidemux.la 
+#		libgstaviparse.la
 #		libgstaviaudiodecoder.la
 
-libgstavidemux_la_SOURCES = gstavidemux.c 
+libgstavidemux_la_SOURCES = gstavidemux.c
 libgstavimux_la_SOURCES = gstavimux.c 
-libgstaviparse_la_SOURCES = gstaviparse.c riff.c
+#libgstaviparse_la_SOURCES = gstaviparse.c
 # libgstaviaudiodecoder_la_SOURCES = gstaviaudiodecoder.c 
 
 noinst_HEADERS = \
 		gstavimux.h \
 		gstavidemux.h \
-		riff.h \
 		gstaviaudiodecoder.h
 
 #CFLAGS += -Wall -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions -ffast-math -DNDEBUG
@@ -27,9 +26,9 @@ libgstavimux_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
 libgstavimux_la_LIBADD =
 libgstavimux_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-libgstaviparse_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
-libgstaviparse_la_LIBADD =
-libgstaviparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+#libgstaviparse_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
+#libgstaviparse_la_LIBADD =
+#libgstaviparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 # libgstaviaudiodecoder_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
 # libgstaviaudiodecoder_la_LIBADD =
