--- a/gstreamer/tests/old/testsuite/refcounting/Makefile.am
+++ b/gstreamer/tests/old/testsuite/refcounting/Makefile.am
@@ -14,7 +14,7 @@ bin_SOURCES = bin.c mem.c
 GST_PLUGIN_PATH = $(shell cd $(top_builddir) && pwd)
 TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=`pwd`/test-registry.xml
 
-TESTS = $(tests_failing) $(tests_working)
+TESTS = $(tests_working)
 
 check_PROGRAMS = $(TESTS)
 
