--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -364,7 +364,12 @@ dnl        non-PIC libXv, if not then don not use Xv.
 dnl FIXME: perhaps warn user if they have a shared libXv since
 dnl        this is an error until XFree86 starts shipping one
 translit(dnm, m, l) AM_CONDITIONAL(USE_XVIDEO, true)
+
 GST_CHECK_FEATURE(XVIDEO, [X11 XVideo extensions], xvideosink videosink, [
+  dnl use X_CFLAGS for check
+  save_FLAGS=$CFLAGS
+  CFLAGS=$X_CFLAGS
+
   dnl check for PIC static lib
   GST_CHECK_LIBHEADER(XVIDEO, Xv_pic, XvQueryExtension, $X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS, X11/extensions/Xvlib.h, XVIDEO_LIBS="-lXv_pic -lXext")
   if test x$HAVE_XVIDEO = xno; then
@@ -372,6 +377,9 @@ GST_CHECK_FEATURE(XVIDEO, [X11 XVideo extensions], xvideosink videosink, [
     GST_CHECK_LIBHEADER(XVIDEO, Xv, XvQueryExtension, $X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS, X11/extensions/Xvlib.h, XVIDEO_LIBS="-lXv -lXext")
   fi
   AC_SUBST(XVIDEO_LIBS)
+
+  dnl restore CFLAGS
+  CFLAGS=$save_CFLAGS
 ])
 
 dnl Next, check for the optional libraries:
