add asf plugin to build
Original commit message from CVS:
add asf plugin to build

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -227,7 +227,7 @@ AC_SUBST(GST_PLUGIN_LDFLAGS)
 
 dnl these are all the gst plug-ins, compilable without additional libs
 GST_PLUGINS_ALL="\
-        ac3parse adder audioscale auparse avi cdxaparse chart\
+        ac3parse adder audioscale auparse avi asfdemux cdxaparse chart\
         cutter deinterlace effectv festival filter flx goom\
         intfloat law level\
         median mixmatrix mpeg1enc mpeg1sys mpeg1videoparse mpeg2enc mpeg2sub\
@@ -1007,6 +1007,7 @@ gst/adder/Makefile
 gst/audioscale/Makefile
 gst/auparse/Makefile
 gst/avi/Makefile
+gst/asfdemux/Makefile
 gst/cdxaparse/Makefile
 gst/chart/Makefile
 gst/cutter/Makefile
