--- a/gstreamer/tools/Makefile.am
+++ b/gstreamer/tools/Makefile.am
@@ -7,15 +7,15 @@ endif
 if GST_DISABLE_LOADSAVE
 GST_LOADSAVE_SRC = 
 else
-GST_LOADSAVE_SRC = gst-compprep gst-xmllaunch
+GST_LOADSAVE_SRC = gst-compprep gst-xmllaunch gst-complete
 endif
 
 bin_PROGRAMS = 	gst-launch 		\
 		$(GST_REGISTRY_SRC) 	\
 		gst-inspect 		\
 		$(GST_LOADSAVE_SRC) 	\
-		gst-md5sum 		\
-		gst-complete
+		gst-md5sum 		
+
 bin_SCRIPTS = gst-feedback
 
 man_MANS = gst-launch.1 gst-md5sum.1 gst-register.1 gst-inspect.1 \
@@ -30,21 +30,19 @@ gst_md5sum_LDADD = $(GST_LIBS) #-lefence
 gst_md5sum_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 
+gst_inspect_LDADD = $(GST_LIBS) ../libs/gst/control/libgstcontrol-@GST_MAJORMINOR@.la
+gst_inspect_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
+	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
+
 if !GST_DISABLE_REGISTRY
 gst_register_LDADD = $(GST_LIBS)
 gst_register_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
-	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
-endif
-
-gst_inspect_LDADD = $(GST_LIBS) ../libs/gst/control/libgstcontrol-@GST_MAJORMINOR@.la
-gst_inspect_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 
 gst_complete_LDADD = $(GST_LIBS)
 gst_complete_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 
-if !GST_DISABLE_LOADSAVE
 gst_compprep_LDADD = $(GST_LIBS)
 gst_compprep_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
