--- a/gstreamer/examples/Makefile.am
+++ b/gstreamer/examples/Makefile.am
@@ -4,8 +4,14 @@ else
 GST_LOADSAVE_DIRS = xml typefind
 endif
 
-SUBDIRS = autoplug $(GST_LOADSAVE_DIRS) \
-          helloworld helloworld2 \
+if GST_DISABLE_AUTOPLUG
+GST_AUTOPLUG_DIRS = 
+else
+GST_AUTOPLUG_DIRS = autoplug helloworld2
+endif
+
+SUBDIRS = $(GST_AUTOPLUG_DIRS) $(GST_LOADSAVE_DIRS) \
+          helloworld \
           queue queue2 queue3 queue4 \
           launch thread plugins mixer cutter pingpong manual
 
