add wims new xml tool
Original commit message from CVS:
add wims new xml tool

--- a/gstreamer/gstreamer.spec.in
+++ b/gstreamer/gstreamer.spec.in
@@ -166,6 +166,7 @@ ln -sf %{_datadir}/gtk-doc/html/gstreamer-libs %{_datadir}/devhelp/books
 %{_libdir}/gstreamer-%{majorminor}/libgstindexers.so
 
 %files tools
+%{_bindir}/gst-xmlinspect
 %{_bindir}/gst-complete
 %{_bindir}/gst-compprep
 %{_bindir}/gst-inspect
